--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,11 @@ cache/
 .obsidian/
 .vs/
 
+MainProject/
 TestSection/Frontend/
+TestSection/Backend/
+TestSection/Database/
+База/
+.gitignore
+LICENSE
+README.md
