--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ cache
 MainProject
 TestSection/Frontend
 TestSection/Backend
-TestSection/Database
+# TestSection/Database
 База
 LICENSE
 README.md
