same as previous commit

--- a/MainProject/AspNetCoreMVC/AspNetCoreMVC/appsettings.json
+++ b/MainProject/AspNetCoreMVC/AspNetCoreMVC/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AspNetCoreMVCContext": "server=localhost;username=postgres;database=AspNetCoreMVCContext-8397864f-5480-4c97-a439-3fd85774d01b;password=12345;port=5432"
+    "AspNetCoreMVCContext": "Host=your-remote-server;Database=aspnetcoremvc;Username=your-username;Password=your-password;SSL Mode=Require;Trust Server Certificate=true"
   }
 } 
