--- a/MainProject/WebApp/WebApp/appsettings.json
+++ b/MainProject/WebApp/WebApp/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://localhost:4001"
+      },
+      "Https": {
+        "Url": "https://localhost:4000"
+      }
+    }
+  }
 }
