--- a/MainProject/WebApp/WebApp/appsettings.json
+++ b/MainProject/WebApp/WebApp/appsettings.json
@@ -15,5 +15,10 @@
         "Url": "https://localhost:4000"
       }
     }
+  },
+  "JwtSettings": {
+    "Key": "Flat_earth_hitler_caput_super_secret_key_1234512345!",
+    "iss": "1",
+    "aud": "2"
   }
 }
