--- a/MainProject/Авторизация через Identity/Registr/Registr/appsettings.json
+++ b/MainProject/Авторизация через Identity/Registr/Registr/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefConn": "Data Source=.\\sqlexpress;Initial Catalog=DsReg1;Integrated Security=True;TrustServerCertificate=True"
+    "DefConn": "Data Source=.\\SQLExpress;Initial Catalog=SindyDB;Integrated Security=True;TrustServerCertificate=True"
   }
 }
