--- a/MainProject/MVPv5/MVPv5.API/appsettings.json
+++ b/MainProject/MVPv5/MVPv5.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MVPv5Database": "host=localhost;port=5432;username=postgres;database=MVPv5Database-69;password=12345"
+  }
 }
