--- a/MainProject/MVPv5/MVPv5.Domain/MVPv5.Domain.csproj
+++ b/MainProject/MVPv5/MVPv5.Domain/MVPv5.Domain.csproj
@@ -7,7 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Services\" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.4" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MVPv5.Core\MVPv5.Core.csproj" />
   </ItemGroup>
 
 </Project>
