--- a/MainProject/MVPv5/MVPv5.API/MVPv5.API.csproj
+++ b/MainProject/MVPv5/MVPv5.API/MVPv5.API.csproj
@@ -20,7 +20,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MVPv5.Application\MVPv5.Application.csproj" />
     <ProjectReference Include="..\MVPv5.Core\MVPv5.Core.csproj" />
+    <ProjectReference Include="..\MVPv5.Domain\MVPv5.Domain.csproj" />
   </ItemGroup>
 
 </Project>
