--- a/MainProject/MVPv5/MVPv5.Client/MVPv5.Client.csproj
+++ b/MainProject/MVPv5/MVPv5.Client/MVPv5.Client.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MVPv5.Application\MVPv5.Application.csproj" />
     <ProjectReference Include="..\MVPv5.Core\MVPv5.Core.csproj" />
   </ItemGroup>
 
