--- a/MainProject/MVPv5/MVPv5.Client/wwwroot/appsettings.json
+++ b/MainProject/MVPv5/MVPv5.Client/wwwroot/appsettings.json
@@ -6,7 +6,5 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "MVPv5Database": "host=localhost;port=5432;username=postgres;database=MVPv5Database-69;password=1234"
-  }
+  "WebApiAddress": "https://localhost:7253"
 }
