--- a/MainProject/MVPv5/MVPv5.Application/MVPv5.Application.csproj
+++ b/MainProject/MVPv5/MVPv5.Application/MVPv5.Application.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MVPv5.Core\MVPv5.Core.csproj" />
+    <ProjectReference Include="..\MVPv5.Domain\MVPv5.Domain.csproj" />
   </ItemGroup>
 
 </Project>
