--- a/MainProject/MVPv5/MVPv5.API/MVPv5.API.csproj
+++ b/MainProject/MVPv5/MVPv5.API/MVPv5.API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<PropertyGroup>
 		<TargetFramework>net9.0</TargetFramework>
@@ -25,6 +25,14 @@
 		<ProjectReference Include="..\MVPv5.Application\MVPv5.Application.csproj" />
 		<ProjectReference Include="..\MVPv5.Core\MVPv5.Core.csproj" />
 		<ProjectReference Include="..\MVPv5.Domain\MVPv5.Domain.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Include="wwwroot\Zelya.png" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="wwwroot\swagger-ui\" />
 	</ItemGroup>
 
 </Project>
