страницы документов, доработать

--- a/MainProject/MVPv5/MVPv5.Client/wwwroot/appsettings.json
+++ b/MainProject/MVPv5/MVPv5.Client/wwwroot/appsettings.json
@@ -6,5 +6,10 @@
     }
   },
   "AllowedHosts": "*",
-  "WebApiAddress": "https://localhost:7253"
+  "WebApiAddress": "https://localhost:7253",
+  "Kestrel": {
+    "Limits": {
+      "MaxRequestBodySize": 10485760
+    }
+  }
 }
